Update teamplate mail send code for forgot password

--- a/Backend-Chat/src/main/resources/templates/verify-forgot-password.html
+++ b/Backend-Chat/src/main/resources/templates/verify-forgot-password.html
@@ -11,11 +11,10 @@
 <div>Hello <span th:text="${fullName}"></span>,</div>
 <div>
     Verification code to confirm forgot your password for <span th:text="${appName}"></span>:
-    <b th:value="${code}"></b>
+    <b th:text="${code}"></b>
     <br>
-    This verification code will expire in 30 minutes. If you did not make this request, please disregard this email.
-    <br>
-    This is an automated message. Please do NOT reply to this email.
+    This verification code will expire in <span th:text="${expirationTime}"></span> minutes. If you did not make this
+    request, please disregard this email.
     <br>
     <br>
     Thanks!
