--- a/Frontend-Chat/css/login.css
+++ b/Frontend-Chat/css/login.css
@@ -18,6 +18,10 @@ form {
     margin-top: 50px;
 }
 
+.form-group {
+    margin-top: 10px;
+}
+
 label {
     font-weight: bold;
 }
@@ -31,7 +35,7 @@ input[type=password] {
     border: none;
     border-radius: 4px;
     background-color: #f2f2f2;
-    margin: 10px 0 15px 0;
+    margin: 5px 0 5px 0;
 }
 
 input[type="submit"] {
@@ -46,7 +50,7 @@ input[type="submit"] {
     transition: background-color 0.2s ease;
     display: block;
     margin: 0 auto;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 input[type="submit"]:hover {
@@ -56,6 +60,13 @@ input[type="submit"]:hover {
 #error-message {
     color: red;
     font-weight: bold;
+    font-size: 14px;
+}
+
+.forgot-pass {
+    font-size: 15px;
+    text-align: right;
+    text-decoration: none;
     font-size: 14px;
 }
 
