--- a/Frontend-Chat/css/index.css
+++ b/Frontend-Chat/css/index.css
@@ -292,7 +292,7 @@ body {
 
 .searchBox-inner .form-control {
     height: 100%;
-    padding: 5px 10px !important;
+    padding: 5px 15px !important;
     flex: 1; /* Phần tử input sẽ mở rộng để lấp đầy không gian còn lại */
     transition: none !important;
     border-radius: 20px;
@@ -495,7 +495,7 @@ body {
 
 .composeBox-inner .form-control {
     height: 100%;
-    padding: 5px 10px !important;
+    padding: 5px 15px !important;
     flex: 1; /* Phần tử input sẽ mở rộng để lấp đầy không gian còn lại */
     transition: none !important;
     border-radius: 20px;
@@ -718,7 +718,7 @@ body {
 }
 
 .message-main-receiver {
-    /*padding: 10px 20px;*/
+    padding: 3px 20px;
     max-width: 60%;
 }
 
@@ -749,6 +749,38 @@ body {
     /* #9a9a9a; */
     font-weight: normal;
 
+}
+
+.image-attachment-sender {
+    width: 200px;
+    height: auto;
+    object-fit: cover;
+    float: right;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.image-attachment-receiver {
+    width: 200px;
+    height: auto;
+    object-fit: cover;
+    float: left;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.video-attachment-sender {
+    width: 70%;
+    height: auto;
+    float: right;
+    padding-bottom: 5px !important;
+}
+
+.video-attachment-receiver {
+    width: 70%;
+    height: auto;
+    float: left;
+    padding-bottom: 5px !important;
 }
 
 .receiver {
@@ -786,6 +818,21 @@ body {
     z-index: 1000;
 }
 
+.sending-notification {
+    /* display: block; */
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
 .reply-emojis {
     width: 40px;
     padding: 5px !important;
@@ -802,16 +849,23 @@ body {
     color: #0084ff;
 }
 
-.reply-images {
+.reply-files {
     width: 40px;
     padding: 5px !important;
 
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+}
+
+.reply-files label {
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
-.reply-images i {
+.reply-files i {
     text-align: center;
     padding: 5px !important;
     cursor: pointer;
