--- a/Frontend-Chat/css/index.css
+++ b/Frontend-Chat/css/index.css
@@ -369,7 +369,7 @@ body {
     border-radius: 50%;
     height: 49px;
     width: 49px;
-    /* object-fit: cover; */
+    object-fit: cover;
 }
 
 .sideBar-main {
@@ -691,6 +691,14 @@ body {
     height: calc(100% - 120px);
 }
 
+.sending-notification {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;    
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
 .message-previous {
     margin: 0 !important;
     padding: 0 !important;
@@ -816,21 +824,6 @@ body {
     padding: 10px 5px 10px 5px !important;
     margin: 0 !important;
     z-index: 1000;
-}
-
-.sending-notification {
-    /* display: block; */
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
 }
 
 .reply-emojis {
